# player

./: .gitignore  README.md  run_evn
files/lyric/: 夏之旅.lrc  夏之旅.lrc_b  热情的夏季.lrc
resource/setting/: application.conf
src/: Makefile  Makerules
src/application/: Makefile
src/application/awakened/: Makefile  appdisplayshelf.cpp  appdisplayshelf.h  apptitlewidget.cpp  apptitlewidget.h  appwidget.cpp  appwidget.h  awakened.pro  mainwidget.cpp  mainwidget.h
src/application/desktopcapture/: Makefile  captureplaywidget.cpp  captureplaywidget.h  capturethread.cpp  capturethread.h  capturewidget.cpp  capturewidget.h  desktopcapture.pro
src/application/musicplayer/: Makefile  audioplayerwidget.cpp  audioplayerwidget.h  itemdelegate.cpp  itemdelegate.h  lyricwidget.cpp  lyricwidget.h  musicplayer.pro  playerwidget.cpp  playerwidget.h  playmonitorthread.cpp  playmonitorthread.h
src/application/pictureprocessor/: Makefile  imageprocessorwidget.cpp  imageprocessorwidget.h  pictureprocessor.pro  showpicturewidget.cpp  showpicturewidget.h
src/application/qtplayer/: Makefile  playermainwidget.cpp  playermainwidget.h  playwidget.cpp  playwidget.h  qtplayer.pro
src/application/rtmplive/: Makefile  (+7 more)
src/datapackage/: Makefile  datapackage.pro  mp4package.cpp  mp4package.h  rtmpplugflow.cpp  rtmpplugflow.h
src/lib/: Makefile
src/musicplay/: Makefile
src/networkroad/: Makefile  Makerules
src/networkroad/client/: CMakeLists.txt  httprequest.cpp  httprequest.h  main.cpp  mqttpubmessage.cpp  mqttpubmessage.h  tcpconnectserver.cpp  tcpconnectserver.h
src/networkroad/server/: CMakeLists.txt  Makefile  Makerules  main.cpp  waitconnect.cpp  waitconnect.h
src/vediorecorde/: Makefile  basegrab.h  cameragrab.cpp  cameragrab.h  desktopgrab.cpp  desktopgrab.h  lovelive.cpp  lovelive.h  openglplaywidget.cpp  openglplaywidget.h  packetlist.h  realplaymanager.cpp  realplaymanager.h  realtimeaudioplay.cpp  realtimeaudioplay.h  realtimevedioplay.cpp  realtimevedioplay.h  recordsound.cpp  sdlplaywidget.cpp  sdlplaywidget.h  variablefile.cpp  variablefile.h  vediorecorde.pro
(+135 files in other folders)
